# bookwalker-sale-to-kindle

./: .env.sample  README.md  make_kindle_link.py  pyproject.toml
app/schemas/: bookwalker_schemas.py
app/utils/: bitly_utils.py  paapi_utils.py  scraping_utils.py
tests/: test_paapi.py  test_scraping_utils.py  test_shorten_url.py
