[tool.poetry]
name = "bookwalker-sale-to-kindle"
version = "0.1.0"
description = ""
authors = ["hito_horobe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
python-amazon-paapi = "^5.0.1"
requests-cache = "^1.2.1"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
pre-commit = "^4.1.0"
ruff = "^0.9.3"

[tool.ruff]
exclude = [".venv", ".pytest_cache", ".git"]

[tool.ruff.lint]
select = ["I", "N"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
